--- a/style/information.css
+++ b/style/information.css
@@ -34,6 +34,7 @@
 .link-btn{
     color: var(--cor-fundo);
     text-decoration: none;
+    font-size: .9rem;
 }
 .contact-network{
     text-align: center;
